Version: $Id$ $Name$

dohpaZ (02/18/04)
---------------------
+ Updated version to 5.0.0.7
+ Updated to work with 02/18/04 EQLive
+ Added Frenzy to skill list
+ Integrated patch #899331 "Bazaar Search logging" from perlmonkey (ajs)

dohpaZ (02/14/04)
---------------------
+ Updated version to 5.0.0.6
+ Patch to fix QCursor issue.
+ More updates to work with 02/10/04 EQLive
+ Added the "Dockable" sub-menu to the View menu to control the dockability 
  of various windows.

dohpaZ (02/11/04)
---------------------
+ Updated version to 5.0.0.5
+ Updated to work with 02/10/04 EQLive
+ Added Beserker class
+ Added Gate of Discord (GoD) maps.
+ Integrated patch #893070 "Races Update (GoD)" by curioseq
+ Minor fix to guild member list online member count tracking.
+ Make sure to cleanup guild list/shell when shutting down
+ Added special map icon for zone doors.

dohpaZ (01/18/04)
---------------------
+ Updated version to 5.0.0.4
+ More updates to work with 12/19/03 EQLive 
+ Fix border cases in SpellShell that would cause ShowEQ to crash.
+ Added a workaround for ISO/ANSI/IEC C++ and C conformance regressions
  in gcc 3.3.
+ Minor fix in h2info.pl that fixes the comment and operation with certain
  versions of perl.
+ Made packet handling more robust in the face of corrupt and non-EQ packets
  that are captured.
+ Support display of a zone's safepoint from the zone packet on the map.
+ Added NetStream classes for handling network byte order data streams.
+ Cleaned up the textual dump of guild names
+ Added GuildShell to track the list of guild members.
+ Added support for LoY guild information capture/display.
+ Made filter2xml.pl more robust in the face of trailing spaces and Windows
  line termination.
+ Integrated patch #861374 "Fix-three options aren't saved".
+ Integrated patch #864328 "Nedaria's Landing Map".
+ Integrated patch #864329 "Map: JaggedPine touchups".
+ Integrated patch #868227 "Restore light sources".

dohpaZ (12/19/03)
---------------------